// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@theme/r-material: core/components: Navigation # should mount Navigation with props.title correctly 1`] = `
<div
  className="makeStyles-root-1"
>
  <CssBaseline />
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-appBar-2"
    position="fixed"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="Open drawer"
        className="makeStyles-menuButton-4"
        color="inherit"
        edge="start"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="menu"
        />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Typography))
        color="inherit"
        noWrap={true}
        variant="h6"
      >
        title
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
  <WithStyles(ForwardRef(Drawer))
    anchor="left"
    className="makeStyles-drawer-6"
    classes={
      Object {
        "paper": "makeStyles-drawerPaper-7",
      }
    }
    open={false}
    variant="persistent"
  >
    <div
      className="makeStyles-drawerHeader-8"
    >
      <WithStyles(ForwardRef(IconButton))
        aria-label="Close drawer"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="chevronLeft"
        />
      </WithStyles(ForwardRef(IconButton))>
    </div>
  </WithStyles(ForwardRef(Drawer))>
  <main
    className="makeStyles-content-9"
  >
    <div
      className="makeStyles-drawerHeader-8"
    />
  </main>
</div>
`;

exports[`@theme/r-material: core/components: Navigation # should show SideBar when state.open is true 1`] = `
<div
  className="makeStyles-root-1"
>
  <CssBaseline />
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-appBar-2 makeStyles-appBarShift-3"
    position="fixed"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="Open drawer"
        className="makeStyles-menuButton-4 makeStyles-hide-5"
        color="inherit"
        edge="start"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="menu"
        />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Typography))
        color="inherit"
        noWrap={true}
        variant="h6"
      >
        title
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
  <WithStyles(ForwardRef(Drawer))
    anchor="left"
    className="makeStyles-drawer-6"
    classes={
      Object {
        "paper": "makeStyles-drawerPaper-7",
      }
    }
    open={true}
    variant="persistent"
  >
    <div
      className="makeStyles-drawerHeader-8"
    >
      <WithStyles(ForwardRef(IconButton))
        aria-label="Close drawer"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="chevronLeft"
        />
      </WithStyles(ForwardRef(IconButton))>
    </div>
  </WithStyles(ForwardRef(Drawer))>
  <main
    className="makeStyles-content-9 makeStyles-contentShift-10"
  >
    <div
      className="makeStyles-drawerHeader-8"
    />
  </main>
</div>
`;

exports[`@theme/r-material: core/components: Navigation # should show menus when have non-empty menus props 1`] = `
<div
  className="makeStyles-root-1"
>
  <CssBaseline />
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-appBar-2"
    position="fixed"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="Open drawer"
        className="makeStyles-menuButton-4"
        color="inherit"
        edge="start"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="menu"
        />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Typography))
        color="inherit"
        noWrap={true}
        variant="h6"
      >
        title
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
  <WithStyles(ForwardRef(Drawer))
    anchor="left"
    className="makeStyles-drawer-6"
    classes={
      Object {
        "paper": "makeStyles-drawerPaper-7",
      }
    }
    open={false}
    variant="persistent"
  >
    <div
      className="makeStyles-drawerHeader-8"
    >
      <WithStyles(ForwardRef(IconButton))
        aria-label="Close drawer"
        href=""
        onClick={[Function]}
      >
        <BundledIcon
          type="chevronLeft"
        />
      </WithStyles(ForwardRef(IconButton))>
    </div>
    <RoutingItemList
      child={
        Array [
          Object {
            "link": "/to/some-else",
            "name": "mock-sub-name",
          },
          Object {
            "link": "/to/bar",
            "name": "mock-other-sub-name",
          },
        ]
      }
      icon="category"
      key="0"
      link="/to/somewhere"
      name="Categories"
      priority={3}
    />
    <RoutingItemList
      child={
        Array [
          Object {
            "link": "/to/some-else",
            "name": "mock-sub-name",
          },
          Object {
            "link": "/to/bar",
            "name": "mock-other-sub-name",
          },
        ]
      }
      icon="bookmark"
      key="1"
      link="/to/somewhere"
      name="Tags"
      priority={3}
    />
  </WithStyles(ForwardRef(Drawer))>
  <main
    className="makeStyles-content-9"
  >
    <div
      className="makeStyles-drawerHeader-8"
    />
  </main>
</div>
`;
